--- a/DriverOnlineTests/DriverOnlineTests.csproj
+++ b/DriverOnlineTests/DriverOnlineTests.csproj
@@ -114,11 +114,15 @@
     <Compile Include="Jira\CSharp325Tests.cs" />
     <Compile Include="Jira\CSharp330Tests.cs" />
     <Compile Include="Jira\CSharp353Tests.cs" />
+    <Compile Include="Jira\CSharp358Tests.cs" />
     <Compile Include="Jira\CSharp77Tests.cs" />
     <Compile Include="Jira\CSharp92Tests.cs" />
     <Compile Include="Jira\CSharp93Tests.cs" />
     <Compile Include="Jira\CSharp98Tests.cs" />
     <Compile Include="Jira\CSharp100Tests.cs" />
+    <Compile Include="Linq\MongoLinqFindQueryTests.cs" />
+    <Compile Include="Linq\MongoQueryableTests.cs" />
+    <Compile Include="Linq\MongoQueryProviderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samples\MagicDiscriminatorTests.cs" />
   </ItemGroup>
