--- a/DriverUnitTestsPosh/DriverUnitTestsPosh.csproj
+++ b/DriverUnitTestsPosh/DriverUnitTestsPosh.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MongoDB.DriverUnitTestsPosh</RootNamespace>
     <AssemblyName>MongoDB.DriverUnitTestsPosh</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
